# switchyard

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.example.yaml  pyproject.toml
.github/workflows/: release.yml
src/switchyard/: __main__.py  app.py  config.py  log.py  storage.py  sync_queue.py  sync_worker.py  upstream.py
src/switchyard/routes/: base.py  blobs.py  catalog.py  manifests.py
tests/: conftest.py  test_config.py  test_integration.py  test_routes_base.py  test_routes_blobs.py  test_routes_catalog.py  test_routes_manifests.py  test_storage.py  test_sync_queue.py  test_sync_worker.py  test_upstream.py
