[project]
name = "switchyard"
version = "0.1.2"
description = "Local Docker registry with async upstream sync"
requires-python = ">=3.14"
dependencies = [
    "starlette>=1.0.0",
    "granian[uvloop]>=2.7.2",
    "httpx[brotli,zstd,http2]>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
switchyard = "switchyard.__main__:main"

[build-system]
requires = ["uv_build>=0.7"]
build-backend = "uv_build"

[tool.ruff]
line-length = 99
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
